# moonlight-webstream-reencode-ffmpeg-server

./: .gitignore  Cargo.toml  README.md  build-windows.ps1
.github/workflows/: docker.yml  linux.yml  windows.yml
Cross/: Dockerfile  Dockerfile.x86_64-pc-windows-gnu
docker/: Dockerfile.action  Dockerfile.local  docker-compose.yaml  entrypoint.sh
moonlight-common/: Cargo.toml
moonlight-common-sys/: Cargo.toml  build.rs
moonlight-common-sys/src/: lib.rs
moonlight-common/src/stream/: bindings.rs  video.rs
moonlight-web/common/src/: api_bindings.rs  lib.rs
moonlight-web/streamer/: Cargo.toml
moonlight-web/streamer/src/: ffmpeg.rs  main.rs  video.rs
moonlight-web/streamer/src/transport/: mod.rs
moonlight-web/streamer/src/transport/web_socket/: mod.rs
moonlight-web/streamer/src/transport/webrtc/: mod.rs  video.rs
moonlight-web/web-server/: Cargo.toml
moonlight-web/web-server/src/api/: mod.rs  stream.rs
moonlight-web/web-server/src/app/: host.rs
moonlight-web/web-server/src/app/storage/: mod.rs
moonlight-web/web-server/web/: admin.ts  api.ts  build_info.ts  default_settings.ts  footer.ts  index.ts  screen_keyboard.ts  stream.ts
moonlight-web/web-server/web/component/: context_menu.ts  input.ts  settings_menu.ts
moonlight-web/web-server/web/libopus/: index.ts
moonlight-web/web-server/web/polyfill/: ios_right_click.ts
moonlight-web/web-server/web/stream/: index.ts  input.ts  stats.ts  touch_controller.ts
moonlight-web/web-server/web/styles/: old.css  standard.css
server/: config.json
(+14 files in other folders)
