[package]
name = "moonlight-common-sys"
version.workspace = true
edition = "2024"
license = { workspace = true }

[dependencies]
openssl-sys = { workspace = true }

[features]
default = ["vendored", "openssl-sys/vendored"]

# Moonlight Features
crypto = []

# Vendored
vendored = ["dep:cmake"]

[build-dependencies]
bindgen = { workspace = true }
cmake = { workspace = true, optional = true }
